...
                Text("Time Signature").frame(width: 130, alignment: .leading)
                IntBox(value: $store.tsNumerator, id: "tsNum"); Text("/")
                IntBox(value: $store.tsDenominator, id: "tsDen")
            }
            HStack {
                Text("Tempo").frame(width: 130, alignment: .leading)
                DoubleBox(value: $store.tempoBPM, id: "tempo"); Text("BPM")
            }
            if showResolution {
                HStack {
                    Text("Beat Resolution").frame(width: 130, alignment: .leading)
                    IntBox(value: $store.beatResolution, id: "beatRes"); Text("Beats")
                }
...
